# deep-forge

./: .dockerignore  .gitignore  Dockerfile.runpod  docker-compose.yml  pyproject.toml
backend/: __init__.py  requirements.txt
backend/api/: __init__.py  dependencies.py  models.py  server.py
backend/api/middleware/: auth.py
backend/api/routes/: __init__.py  builder.py  configs.py  datasets.py  files.py  hparam_configs.py  inspection.py  model_specs.py  optuna.py  system.py  training.py  vision.py
backend/api/state/: training_state.py
backend/api/tasks/: helpers.py  optuna_search.py  train.py
backend/configs/: __init__.py  config_manager.py  pipeline_sampling_config.py
backend/core/: __init__.py  base.py  component_loader.py  lora.py  lora_setup.py  model_builder.py  optimizer_builder.py  sampling.py  unified_trainer.py
backend/datasets/: __init__.py  builtin_datasets.py  dataset_manager.py  image_caption.py
backend/modules/: __init__.py  callbacks.py  caption_pipelines.py  hyperparam_tuning.py  losses.py  model_loader.py  model_registry.py  optimizers.py  schedulers.py  vision_service.py
backend/pipelines/: __init__.py  base_pipeline.py  registry.py  samplers.py  sdxl_pipeline.py  z_image_turbo_pipeline.py
configs/: config.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf  nginx.runpod.conf
docs/: lora_captioning_prompts.md
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/components/: Sidebar.jsx
frontend/src/utils/: api.js
scripts/: entrypoint.sh  runpod-start.sh  start_server.py
(+17 files in other folders)
